Fix header links on mobile

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -49,3 +49,13 @@
   right: 1em;
   background: white;
 }
+
+.nav-menu-item {
+  width: 100%;
+  padding: 0.5em;
+  font-size: 0.75em;
+}
+
+.nav-menu-item:hover {
+  background-color: var(--primary-selected-hover-color);
+}
